<resources>
    <string name="app_name">Zvent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zvent Organizing App</string>
    <string name="nav_header_subtitle">gethelp@zvent.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">About</string>
    <string name="about_text">"Zvent is dedicated for those who are looking for some fun out there were you don't have to worry about any detail. Be prepared to have a new organizing way to control who came to your party or event without going crazy. Mark the ✓ symbol for those who came and the ✕ for those who didn't. Enjoy your party!"</string>
    <string name="content_description" />
    <string name="home_text">What are you waiting for?</string>
    <string name="start_b">START</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no" />
    <string name="reload">Restart</string>
    <string name="invitados_text">Invitados: 10</string>
    <string name="title_android_trivia_question">Invitados (%1$d/%2$d)</string>
    <string name="verInvitados_text">VER INVITADOS</string>
    <string name="registro_text">Registro</string>
    <string name="share">Share</string>
    <string name="menu_invited_list">Guests List</string>
    <string name="add_guest">Add Guest</string>
    <string name="new_guest">New guest</string>
    <string name="add_a_guest">Add a guest</string>
    <string name="guest_email">Guest email</string>
    <string name="guest_name">Guest name</string>
    <string name="guest_phone_number">Guest phone number</string>
    <string name="add_description">Description</string>
    <string name="add_order">Order</string>
    <string name="add_an_order">Select an order</string>
    <string-array name="array">
        <item>Organizador</item>
        <item>Fotografo</item>
        <item>Participante</item>
    </string-array>

</resources>
