<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable type="com.example.zvent.ui.invited.Guest"
            name="guest"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="424dp"
        android:layout_height="1069dp">


        <EditText
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:ems="10"
            android:hint="@string/guest_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.11" />

        <EditText
            android:id="@+id/texto2"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:ems="10"
            android:hint="@string/add_description"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto1"
            app:layout_constraintVertical_bias="0.034" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="230dp"
            android:layout_height="24dp"
            android:layout_marginTop="60dp"
            android:max="10"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto2" />

        <TextView
            android:id="@+id/texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_order"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.183"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto2" />

        <TextView
            android:id="@+id/texto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_an_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintVertical_bias="0.112" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>>